--- a/Sass_pro/scss/colores.css
+++ b/Sass_pro/scss/colores.css
@@ -4,5 +4,4 @@
   --celeste-menu: #c5edff;
   --letra-gris: #666666;
   --letra-negra: rgb(44, 39, 39);
-}
-/*# sourceMappingURL=colores.css.map */
+}/*# sourceMappingURL=colores.css.map */
