--- a/proyecto2/Sass_pro/scss/colores.css
+++ b/proyecto2/Sass_pro/scss/colores.css
@@ -3,5 +3,4 @@
   --rosa-fuerte: #a80f96;
   --celeste-menu: #c5edff;
   --letra-gris: #78909c;
-}
-/*# sourceMappingURL=colores.css.map */
+}/*# sourceMappingURL=colores.css.map */
