--- a/Sass_pro/scss/body.css
+++ b/Sass_pro/scss/body.css
@@ -3,7 +3,6 @@
   padding: 0px;
   margin: 0px;
   font-size: 2vh;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   font-family: "Mulish", sans-serif;
 }
@@ -19,20 +18,14 @@ a {
   grid-template-columns: 1fr 1fr;
   -ms-grid-rows: 115vh 135vh 90vh 90vh 120vh 50vh 80vh;
   grid-template-rows: 45% 12% 80% 50% 22% 32%;
-      grid-template-areas: "portada portada-2" "contain_title_ofert  contain_title_ofert" "containPrincipal  containPrincipal" "secciones secciones" "ant-foot ant-foot" "footer footer";
+  grid-template-areas: "portada portada-2" "contain_title_ofert  contain_title_ofert" "containPrincipal  containPrincipal" "secciones secciones" "ant-foot ant-foot" "footer footer";
 }
 .containPrincipal {
-  -ms-grid-row: 3;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
   grid-area: containPrincipal;
 }
 
 .contain_title_ofert {
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
   grid-area: contain_title_ofert;
   overflow-x: hidden;
 }
-/*# sourceMappingURL=body.css.map */
+/*# sourceMappingURL=body.css.map *//*# sourceMappingURL=body.css.map */
