--- a/Sass_pro/scss/muestraDeDatos.css
+++ b/Sass_pro/scss/muestraDeDatos.css
@@ -4,24 +4,18 @@
   margin: auto;
   margin-top: 8%;
   height: 70%;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
-  -ms-grid-rows: 30% 70%;
-      grid-template-rows: 30% 70%;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 30% 70%;
   display: none;
 }
 
 .container_sectionDatos1.cambio_contain {
-  display: -ms-grid;
   display: grid;
 }
 
 .container2_sectionDatos1 {
   border: medium solid black;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
   grid-row: 1/3;
   margin: 15px;
   display: none;
@@ -62,19 +56,10 @@
 }
 
 .carta_deDatos2 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
   height: 65%;
 }
 
@@ -122,25 +107,14 @@ td {
   height: 19vh;
   top: 340%;
   position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
   display: none;
 }
 
 .mostrar_clientes.mostrar_clientesCambio {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
@@ -157,5 +131,4 @@ td {
   background: white;
   border-color: #1717a7;
   border-radius: 15px 15px 15px 15px;
-}
-/*# sourceMappingURL=muestraDeDatos.css.map */
+}/*# sourceMappingURL=muestraDeDatos.css.map */
