--- a/Sass_pro/scss/productos.css
+++ b/Sass_pro/scss/productos.css
@@ -2,7 +2,6 @@
   padding: 0px;
   margin: 0px;
   font-size: 2vh;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
 }
@@ -12,49 +11,31 @@ a {
 }
 
 .body_product {
-  display: -ms-grid;
   display: grid;
-      grid-template-areas: "presentacion_productos  presentacion_productos" "img__product   img__product" "footer  footer";
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
-  -ms-grid-rows: 30vh 370vh 80vh;
-      grid-template-rows: 30vh 370vh 80vh;
+  grid-template-areas: "presentacion_productos  presentacion_productos" "img__product   img__product" "footer  footer";
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 30vh 370vh 80vh;
 }
 
 .footer {
-  -ms-grid-row: 3;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
   grid-area: footer;
 }
 
 .presentacion_productos {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
   grid-area: presentacion_productos;
 }
 
 .img__product {
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
   grid-area: img__product;
 }
 
 .title__img_cont {
   width: 100%;
   grid-area: title__img_cont;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  align-items: flex-end;
   margin-top: 10%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 
 .inside_h1 {
@@ -65,5 +46,4 @@ a {
 
 .menu_opciones {
   position: absolute;
-}
-/*# sourceMappingURL=productos.css.map */
+}/*# sourceMappingURL=productos.css.map */
