--- a/Sass_pro/scss/querysIndex.css
+++ b/Sass_pro/scss/querysIndex.css
@@ -5,7 +5,6 @@
     display: none;
   }
 }
-
 /* Landscape phone to portrait tablet */
 /* Landscape phones and down */
 /* Smartphones (portrait and landscape) ----------- */
@@ -15,9 +14,11 @@
     width: 100%;
     display: block;
   }
+
   .cont-enla ul li a > span {
     display: none;
   }
+
   .logo {
     text-align: center;
     height: -webkit-fit-content;
@@ -25,26 +26,18 @@
     height: fit-content;
     margin: 0;
     padding: 0;
-    -webkit-box-flex: 0;
-        -ms-flex: 0;
-            flex: 0;
+    flex: 0;
     height: fit-content;
     width: 100%;
   }
+
   .container_hambur {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
   }
+
   .menuHamCon {
     background-color: white;
     top: 0;
@@ -53,11 +46,13 @@
     width: 100%;
     text-align: end;
   }
+
   .btnCarr_ham {
     border: none;
     background: none;
     padding: 2%;
   }
+
   .panel_btn {
     position: fixed;
     z-index: 2005;
@@ -67,17 +62,12 @@
     height: 4rem;
     border-radius: 50%;
     padding: 0;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     background-color: white;
   }
+
   .panel_hambur {
     position: fixed;
     z-index: 998;
@@ -85,158 +75,145 @@
     width: 100%;
     top: 0;
     bottom: 0;
-    -webkit-transition: -webkit-transform 0.3s ease;
-    transition: -webkit-transform 0.3s ease;
     transition: transform 0.3s ease;
-    transition: transform 0.3s ease, -webkit-transform 0.3s ease;
     color: black;
-    -webkit-transform: translate(100%, 0);
-            transform: translate(100%, 0);
+    transform: translate(100%, 0);
   }
+
   .panel_hambur.panelActive {
-    -webkit-transform: translate(0, 0);
-            transform: translate(0, 0);
+    transform: translate(0, 0);
   }
+
   .ul_hambur {
     width: inherit;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: flex-end;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-end;
     text-align: start;
     list-style: none;
   }
+
   .ul_hambur li {
     width: 100%;
     padding: 7%;
     display: block;
     text-decoration: none;
-    -webkit-transition: all 0.3s ease;
     transition: all 0.3s ease;
   }
+
   .ul_hambur li :hover {
     font-weight: bold;
     color: #8a6e6e;
     background-color: darkblue;
   }
+
   .ul_hambur li a {
     text-decoration: none;
     color: black;
     font-size: 130%;
     font-family: "Mulish", sans-serif;
   }
+
   .ul_hambur_fas {
     width: inherit;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
     border-top: 1px solid black;
     text-align: start;
     list-style: none;
   }
+
   .title_Hamburg {
     padding: 5%;
     font-size: 160%;
     font-family: "Mulish", sans-serif;
   }
+
   .ul_hambur_fas li {
     width: 100%;
     padding: 7%;
     display: block;
     text-decoration: none;
     background-color: #d4cbcb;
-    -webkit-transition: all 0.3s ease;
     transition: all 0.3s ease;
   }
+
   .a_ul_fas {
     text-decoration: none;
     color: black;
     font-size: 130%;
     font-family: "Mulish", sans-serif;
   }
+
   .off {
     display: none;
   }
+
   .ul_hambur_fas li {
     list-style: none;
   }
+
   .cont-enla ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     overflow: hidden;
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-around;
     height: 6vh;
   }
+
   .cont-enla ul li a {
     text-align: center;
   }
+
   .lupa {
     display: none;
     z-index: 1000;
   }
+
   .fa-shopping-bag {
     font-size: 3vh;
   }
+
   .contain_title_ofert {
     font-size: 1vh;
   }
+
   .body__practica {
     overflow-x: hidden;
     overflow-y: auto;
     display: -ms-grid;
     display: grid;
     overflow-x: hidden;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     overflow-x: scroll;
     -ms-grid-columns: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
     -ms-grid-rows: 115vh 135vh 90vh 90vh 120vh 50vh 70vh;
     grid-template-rows: 25% 25% 3% 13% 45% 10% 18%;
-        grid-template-areas: "portada portada" "portada-2 portada-2" "contain_title_ofert  contain_title_ofert" "containPrincipal  containPrincipal" "secciones secciones" "ant-foot ant-foot" "footer footer";
+    grid-template-areas: "portada portada" "portada-2 portada-2" "contain_title_ofert  contain_title_ofert" "containPrincipal  containPrincipal" "secciones secciones" "ant-foot ant-foot" "footer footer";
   }
+
   .span_publi {
     display: none;
   }
+
   .portada {
     background-position: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
+
   .bu-principal {
     margin-left: 0;
   }
+
   .bu-principal-1 {
     margin-left: 0;
   }
+
   .bu-prin {
     text-decoration: none;
     color: #fff;
@@ -250,19 +227,14 @@
     font-size: 3.5vh;
     font-family: "Mulish", sans-serif;
   }
+
   .portada-2 {
     background-position: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
+
   .des-port {
     margin-bottom: 0;
     width: 43vh;
@@ -270,6 +242,7 @@
     margin-left: 0%;
     font-family: "Mulish", sans-serif;
   }
+
   .bu-prin-1 {
     text-decoration: none;
     color: #fff;
@@ -283,6 +256,7 @@
     font-size: 3.5vh;
     font-family: "Mulish", sans-serif;
   }
+
   .des-port-2 {
     margin-bottom: 0;
     width: 43vh;
@@ -290,147 +264,132 @@
     margin-left: 0%;
     font-family: "Mulish", sans-serif;
   }
+
   .containPrincipal {
     overflow: hidden;
-    -ms-grid-row: 4;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
     grid-area: containPrincipal;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
+    flex-direction: row;
+    flex-wrap: nowrap;
     width: 100%;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    justify-content: center;
     background-color: whitesmoke;
     height: 70vh;
   }
+
   .bt_carrusel_atras {
     background: red;
     float: left;
   }
+
   .imgPubli {
     -o-object-fit: contain;
        object-fit: contain;
     margin-left: auto;
     margin-right: auto;
   }
+
   .btCarrusel {
     background: transparent;
     border: none;
   }
+
   .carrusel_atras {
-    -webkit-transform: translateY(-200%);
-            transform: translateY(-200%);
+    transform: translateY(-200%);
     background: transparent;
     position: absolute;
     text-align: center;
     right: 90%;
     border: none;
   }
+
   .carrusel_adelante {
-    -webkit-transform: translateY(-200%);
-            transform: translateY(-200%);
+    transform: translateY(-200%);
     left: 90%;
     background: transparent;
     position: absolute;
     border: none;
   }
+
   .bu-publicidad {
     position: absolute;
-    -webkit-transform: translate(50%, 700%);
-            transform: translate(50%, 700%);
+    transform: translate(50%, 700%);
     left: 0;
   }
+
   .secciones {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    flex-wrap: wrap;
+    align-items: center;
   }
+
   .container-foot {
     margin-top: 15%;
   }
+
   .img-secciones {
     margin-top: 8%;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
   }
+
   .img-sec {
     position: relative;
     border-radius: 4.9vh;
   }
+
   .img-sec {
     position: relative;
     width: 90%;
     border-radius: 4.9vh;
   }
+
   .title-ant {
     font-size: 115%;
   }
+
   .text-ant {
     font-size: 115%;
     text-align: center;
   }
+
   .inp-email {
     margin-top: 6vh;
     height: 105%;
     font-size: 3;
     width: 160%;
   }
+
   .elem-list a {
     font-size: 112%;
     color: #000;
   }
+
   .derechos-footer {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
   }
+
   .dere {
     font-size: 112%;
     margin-bottom: 10px;
   }
+
   .url-hijo {
     font-size: 90%;
   }
+
   .url-hijo_2 {
     font-size: 90%;
   }
+
   .link-hij {
     font-size: 90%;
   }
 }
-
 /* Smartphones (landscape) ----------- */
 /* Smartphones (portrait) ----------- */
 /* iPads (portrait and landscape) ----------- */
@@ -438,5 +397,4 @@
 /* iPads (portrait) ----------- */
 /* Desktops and laptops ----------- */
 /* Large screens ----------- */
-/* iPhone 4 and high pixel ratio devices ----------- */
-/*# sourceMappingURL=querysIndex.css.map */
+/* iPhone 4 and high pixel ratio devices ----------- *//*# sourceMappingURL=querysIndex.css.map */
