--- a/proyecto2/Sass_pro/scss/formularios_deenvio.css
+++ b/proyecto2/Sass_pro/scss/formularios_deenvio.css
@@ -1,32 +1,18 @@
 .container_contacto {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding-top: 10%;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  box-sizing: border-box;
+  flex-direction: row;
   height: 100%;
   background: #bebebe;
   width: 100%;
 }
 
 .form_form_cont {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
   padding-right: 3vh;
   width: 100%;
 }
@@ -55,5 +41,4 @@
   display: block;
   position: absolute;
   bottom: 35%;
-}
-/*# sourceMappingURL=formularios_deenvio.css.map */
+}/*# sourceMappingURL=formularios_deenvio.css.map */
