--- a/proyecto2/Sass_pro/scss/incio_productos.css
+++ b/proyecto2/Sass_pro/scss/incio_productos.css
@@ -1,26 +1,14 @@
 .img__product {
   margin-top: 20vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  flex-direction: row;
 }
 
 .container-product {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
   overflow: hidden;
 }
 
@@ -29,8 +17,7 @@
   height: -moz-fit-content;
   height: fit-content;
   text-align: center;
-  -webkit-box-shadow: 3px 3px 5px #e5e7e9;
-          box-shadow: 3px 3px 5px #e5e7e9;
+  box-shadow: 3px 3px 5px #e5e7e9;
   position: relative;
   width: 30%;
 }
@@ -77,14 +64,9 @@
 
 .carrto__comprar {
   top: 78%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-around;
+  align-items: center;
   width: 100%;
   height: 0%;
   background-color: #ebedef;
@@ -126,5 +108,4 @@
 
 .carrto__comprar :hover ~ .foto_product {
   z-index: -10;
-}
-/*# sourceMappingURL=incio_productos.css.map */
+}/*# sourceMappingURL=incio_productos.css.map */
