--- a/Sass_pro/scss/body.css
+++ b/Sass_pro/scss/body.css
@@ -7,6 +7,30 @@
   font-family: "Mulish", sans-serif;
 }
 
+#containerCarga {
+  background-color: turquoise;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  transition: all 1s ease;
+  z-index: 5000;
+}
+
+#cargaPagina {
+  border: 15px solid #ccc;
+  border-top-color: #f4266a;
+  border-top-style: groove;
+  border-radius: 100%;
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+}
+
 a {
   text-decoration: none;
 }
