--- a/Sass_pro/scss/_menu.scss
+++ b/Sass_pro/scss/_menu.scss
@@ -84,3 +84,14 @@
     opacity: 100%;
   }
 }
+.button_carrr {
+  border: none;
+  background: transparent;
+}
+.button_busc {
+  width: 40px;
+  height: 32px;
+  border: none;
+  background: transparent;
+  text-align: center;
+}
