--- a/Sass_pro/scss/practica.css
+++ b/Sass_pro/scss/practica.css
@@ -108,6 +108,19 @@
     opacity: 100%;
   }
 }
+.button_carrr {
+  border: none;
+  background: transparent;
+}
+
+.button_busc {
+  width: 40px;
+  height: 32px;
+  border: none;
+  background: transparent;
+  text-align: center;
+}
+
 /*esto es un comentario */
 * {
   padding: 0px;
@@ -115,6 +128,23 @@
   font-size: 2vh;
   box-sizing: border-box;
   font-family: "Mulish", sans-serif;
+}
+
+#containerCarga {
+  background-color: turquoise;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  transition: all 1s ease;
+  z-index: 5000;
+}
+
+#cargaPagina {
+  border: 15px solid #ccc;
+  border-top-color: #f4266a;
+  border-top-style: groove;
+  width: 100px;
+  height: 100px;
 }
 
 a {
