--- a/Sass_pro/scss/practica.css
+++ b/Sass_pro/scss/practica.css
@@ -83,12 +83,9 @@
   font-family: "Cinzel", serif;
   -webkit-animation-duration: 2s;
           animation-duration: 2s;
+  font-size: 190%;
   -webkit-animation-delay: 0.5;
           animation-delay: 0.5;
-}
-
-.logoCLass {
-  font-size: 190%;
 }
 
 @-webkit-keyframes prueba {
@@ -131,7 +128,7 @@
 }
 
 #containerCarga {
-  background-color: turquoise;
+  background-color: #ccc;
   height: 100%;
   width: 100%;
   position: fixed;
@@ -141,12 +138,38 @@
 
 #cargaPagina {
   border: 15px solid #ccc;
-  border-top-color: #f4266a;
+  border-top-color: var(--rosa-fuerte);
   border-top-style: groove;
+  border-radius: 100%;
   width: 100px;
   height: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  -webkit-animation: girar 1s linear infinite;
+  animation: girar 1s linear infinite;
 }
 
+@-webkit-keyframes girar {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes girar {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
 a {
   text-decoration: none;
 }
