--- a/Sass_pro/scss/body.scss
+++ b/Sass_pro/scss/body.scss
@@ -8,7 +8,7 @@
   font-family: "Mulish", sans-serif;
 }
 #containerCarga {
-  background-color: turquoise;
+  background-color: #ccc;
   height: 100%;
   width: 100%;
   position: fixed;
@@ -19,7 +19,7 @@
 }
 #cargaPagina {
   border: 15px solid #ccc;
-  border-top-color: #f4266a;
+  border-top-color: var(--rosa-fuerte);
   border-top-style: groove;
   border-radius: 100%;
   width: 100px;
@@ -30,6 +30,17 @@
   right: 0;
   bottom: 0;
   margin: auto;
+  -webkit-animation: girar 1s linear infinite;
+  -o-animation: girar 1s linear infinite;
+  animation: girar 1s linear infinite;
+}
+@keyframes girar {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 a {
   text-decoration: none;
