--- a/Sass_pro/scss/_pag_novedades.scss
+++ b/Sass_pro/scss/_pag_novedades.scss
@@ -7,7 +7,7 @@
     "separacion_novedad  separacion_novedad "
     "ropa-negra  ropa-negra-text"
     "foto_section-1   foto_section-2"
-    "ropa-colores  ropa-colores-text"
+    "ropa-colores-text   ropa-colores "
     "img__separatoria-3   img__separatoria-3"
     "img__product-3  img__product-3"
     "footer  footer";
