--- a/Sass_pro/scss/_modalCarrito.scss
+++ b/Sass_pro/scss/_modalCarrito.scss
@@ -134,8 +134,11 @@ th {
 .ButtonComCarr {
   background: transparent;
   border: 2px solid black;
+
+  padding: 5px;
+}
+.ButtonComCarr a {
   color: black;
   font-family: "Mulish", sans-serif;
   font-size: 2.5vh;
-  padding: 5px;
 }
